--- a/src/components/buu.css
+++ b/src/components/buu.css
@@ -6,7 +6,7 @@
   @media screen and (max-width: 400px) {
     .card {
       width: 240px;
-      height: 100%;
+      height: 240px;
     }
     
   }
